gitlab/assets/test/03-gitlat-network.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gitlab-exec-ce
  name: gitlab-exec
  namespace: gitlab-exec
spec:
  ports:
  - name: port-1
    port: 80
    protocol: TCP
    targetPort: 80
  - name: port-2
    port: 443
    protocol: TCP
    targetPort: 443
  selector:
    app: gitlab-exec-ce
  sessionAffinity: None
  type: NodePort
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/proxy-body-size: 50000m
      nginx.ingress.kubernetes.io/ssl-redirect: "false"
      #nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: gitlab-exec-k3
  namespace: gitlab-exec
spec:
  tls:
  - hosts:
      - git-ex.k3.acornsoft.io
    secretName: tls-acornsoft-star
  rules:
  - host: git-ex.k3.acornsoft.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: gitlab-exec
            port:
              number: 80
