gitlab/assets/test/04-gitlab-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
  labels:
    release: gitlab-exec-ce
  name: gitlab-exec-ce
  namespace: gitlab-exec
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gitlab-exec-ce
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: gitlab-exec-ce
    spec:
      containers:
      - env:
        - name: EXTERNAL_URL
          value: https://k3lab-git.acornsoft.io
        image: gitlab/gitlab-ce:14.1.0-ce.0
        imagePullPolicy: IfNotPresent
        name: gitlab-exec-ce
        ports:
        - containerPort: 22
          name: ssh
          protocol: TCP
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        resources:
          limits:
            cpu: 4096m
            memory: "8589934592"
          requests:
            cpu: 500m
            memory: "1073741824"
        securityContext:
          privileged: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /etc/gitlab
          name: gitlab-exec-etc
        - mountPath: /var/opt/gitlab
          name: gitlab-exec-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      volumes:
      - name: gitlab-exec-etc
        persistentVolumeClaim:
          claimName: gitlab-exec-etc
      - name: gitlab-exec-data
        persistentVolumeClaim:
          claimName: gitlab-exec-data
